--- a/Kaggle/0. KaKr 3rd ML.md
+++ b/Kaggle/0. KaKr 3rd ML.md
@@ -1,1 +1,4 @@
-start
+### 1st. 2019-06-16 일요일
+---
+![image](https://user-images.githubusercontent.com/27988544/59562432-acfffe80-9067-11e9-9166-ef8c9efa5565.png)
+![image](https://user-images.githubusercontent.com/27988544/59562425-88a42200-9067-11e9-9ec7-ba637aa48247.png)
