--- a/Kaggle/0. KaKr 3rd ML.md
+++ b/Kaggle/0. KaKr 3rd ML.md
@@ -1,3 +1,9 @@
 ### 1st. 2019-06-16 일요일
 ![image](https://user-images.githubusercontent.com/27988544/59562432-acfffe80-9067-11e9-9166-ef8c9efa5565.png)
 ![image](https://user-images.githubusercontent.com/27988544/59562425-88a42200-9067-11e9-9ec7-ba637aa48247.png)
+  
+  ### 스터디 참가자
+  <a href="https://github.com/sksms17456">박현빈</a>
+  <a href="https://github.com/marco0332">이기인</a>
+  <a href="#">이상호</a>
+  <a href="https://github.com/stupid07">이종연</a>
