--- a/Kaggle/0. KaKr 3rd ML.md
+++ b/Kaggle/0. KaKr 3rd ML.md
@@ -1,4 +1,4 @@
-### 1st. 2019-06-16 일요일
+﻿### 1st. 2019-06-16 일요일
 ![image](https://user-images.githubusercontent.com/27988544/59562432-acfffe80-9067-11e9-9166-ef8c9efa5565.png)
 ![image](https://user-images.githubusercontent.com/27988544/59562425-88a42200-9067-11e9-9ec7-ba637aa48247.png)
   
@@ -7,3 +7,25 @@
   <a href="https://github.com/marco0332">이기인</a>
   <a href="#">이상호</a>
   <a href="https://github.com/stupid07">이종연</a>
+  
+  ### 스터디 1일차
+  Object Detection은 Bounding Box를 예측하면서 동시에 Box 안의 Object의 class를 예측하는 작업.
+  ![fig1_cv_task](https://user-images.githubusercontent.com/27988544/59810455-3d786080-9340-11e9-95b8-04227a0a5de9.png)
+  
+  따라서 이 문제를 해결하는 접근 방법으로 1-stage와 2-stage로 나뉜다.
+  1-stage는 속도면에서 장점을 보이고, 2-stage는 정확도면에서 장점을 보인다.
+  ![fig5_2stage](https://user-images.githubusercontent.com/27988544/59810468-4d904000-9340-11e9-9c5b-4959603a54b2.png)
+  ![fig6_1stage](https://user-images.githubusercontent.com/27988544/59810475-55e87b00-9340-11e9-9db4-3e64003bd75c.png)
+  
+  우리는 성능을 높이는 것이 최종 목표지만, 처음부터 구현을 해 보면서 이론을 이해하고 최근 발표된 논문까지 구현해보는 것을 중점적으로 진행할 예정이다.
+  ![fig4_paper_trend_2019](https://user-images.githubusercontent.com/27988544/59810507-7d3f4800-9340-11e9-9d5a-59e07fd8fa30.png)
+  
+  일단 새로운 노트북을 지급 받았으니 Tensorflow를 설치해야 했다.
+  <a href="https://pythonkim.tistory.com/137?category=574546">윈도우10 Tensorflow 설치</a>
+  
+  가상환경 활성화 명령어
+  python -m venv tf_1
+  cd tf_1
+  Scripts\activate.bat
+  
+  
