--- a/Kaggle/0. KaKr 3rd ML.md
+++ b/Kaggle/0. KaKr 3rd ML.md
@@ -20,12 +20,12 @@
   우리는 성능을 높이는 것이 최종 목표지만, 처음부터 구현을 해 보면서 이론을 이해하고 최근 발표된 논문까지 구현해보는 것을 중점적으로 진행할 예정이다.
   ![fig4_paper_trend_2019](https://user-images.githubusercontent.com/27988544/59810507-7d3f4800-9340-11e9-9d5a-59e07fd8fa30.png)
   
-  일단 새로운 노트북을 지급 받았으니 Tensorflow를 설치해야 했다.
+  일단 새로운 노트북을 지급 받았으니 Tensorflow를 설치해야 했다.<br>
   <a href="https://pythonkim.tistory.com/137?category=574546">윈도우10 Tensorflow 설치</a>
   
-  가상환경 활성화 명령어
-  python -m venv tf_1
-  cd tf_1
-  Scripts\activate.bat
+  가상환경 활성화 명령어<br>
+  python -m venv tf_1<br>
+  cd tf_1<br>
+  Scripts\activate.bat<br>
   
   
