--- a/Kaggle/0. KaKr 3rd ML.md
+++ b/Kaggle/0. KaKr 3rd ML.md
@@ -29,3 +29,6 @@
   Scripts\activate.bat<br>
   
   
+  ### 첫번째 시도!
+  ![image](https://user-images.githubusercontent.com/27988544/59836793-24df6900-9387-11e9-8687-f42cc8bfc563.png)
+  공부를 좀 더 해야할 듯. 어떻게 하면 성능을 높일 수 있을지, tensorflow로 기본부터 코딩하는 것도 좋을 듯.
